tests/error/stray.gw
// [contains somewhere] stray in program
**µ
